MDL-42711 theme port from LM: vertical alignment of the course icon
When the course name spans over multiple lines, vertically centered icon does
not look nice (or at least our beloved Benevolent Dictator for Life does not
like it ;-). This hack alignes the icon vertically with the first line of the
course name all the time (or at least it tries to).

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -399,7 +399,7 @@ span.editinstructions {
     background-image:url([[pix:moodle|i/course]]);
     background-repeat: no-repeat;
     padding-left:21px;
-    background-position: center left;
+    background-position: left 0.5em;
 }
 .coursebox.remotehost > .info > .categoryname a {
     background-image:url([[pix:moodle|i/mnethost]]);
