--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -1470,7 +1470,14 @@ img#persona_signin { cursor: pointer; }
     display: block;
     margin-left: 4px;
     padding-left: 4px;
+    padding-right: 4px;
 }
+
+.jsenabled.dir-rtl .moodle-actionmenu[data-enhance] .toggle-display.textmenu {
+    margin-right: 4px;
+    margin-left: initial;
+}
+
 .jsenabled .moodle-actionmenu[data-enhance] .toggle-display.textmenu .iconsmall {
     margin: 8px 4px 0px 2px;
 }
@@ -1478,6 +1485,11 @@ img#persona_signin { cursor: pointer; }
 .jsenabled .moodle-actionmenu[data-enhance] .toggle-display.textmenu .caret {
     margin-top: 4px;
     margin-left: 2px;
+}
+
+.jsenabled.dir-rtl .moodle-actionmenu[data-enhance] .toggle-display.textmenu .caret {
+    margin-right: 2px;
+    margin-left: initial;
 }
 
 .jsenabled .moodle-actionmenu[data-enhanced] .toggle-display {opacity: 1;filter: alpha(opacity=100);}
