MDL-42711 theme port from LM: padded date and footer in upcoming events block (part of commit for MDLSITE-2427)

--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -105,9 +105,21 @@
     display: inline;
 }
 
-.block_calendar_upcoming .footer {
-    margin-top: .5em;
+.block_calendar_upcoming {
+    .footer {
+        margin-top: .5em;
+    }
+    .content {
+        .date {
+            padding-left: 22px;
+        }
+        .footer {
+            padding-top: 10px;
+            padding-left: 0px;
+        }
+    }
 }
+
 #adminsearchquery,
 #blogsearchquery,
 #searchform_search,
