MDL-42711 theme port from LM: fixed up mod_feedback analysis bar heights from auto to 5px

--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -37,6 +37,10 @@ select {
     }
 }
 
+.path-mod-feedback .generalbox div table tbody img {
+    height: 5px; // we should remove the bar height specification in core
+}
+
 @media (max-width: 979px) {
     .path-mod-forum .forumheaderlist {
         thead .header {
