MDL-42711 theme bootstrapbase chat.less :Override max-width for chat user picture on chrome and safari

--- a/theme/bootstrapbase/style/moodle.css
+++ b/theme/bootstrapbase/style/moodle.css
@@ -12942,6 +12942,7 @@ div#dock {
   margin-right: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  max-width: none;
 }
 #chat-messages {
   margin: 20px 25px;
