--- a/theme/bootstrapbase/less/moodle/chat.less
+++ b/theme/bootstrapbase/less/moodle/chat.less
@@ -49,6 +49,7 @@
             margin-right: 8px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            max-width: none;
         }
     }
 }
