MDL-42711 added RTL styles to improvements.

--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -187,4 +187,24 @@
     .block .header .block_action {
         float: left;
     }
+    .block_calendar_upcoming {
+        .content {
+            .date {
+                padding-right: 22px;
+            }
+            .footer {
+                padding-right: 0px;
+            }
+        }
+    }
+    .block_news_items .content {
+        ul li {
+            .name {
+                padding-right: 1ex;
+            }
+        }
+        .footer {
+            padding-left: 0px;
+        }
+    }
 }
