--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -207,3 +207,11 @@ div#dock {
         text-align:center;
     }
 }
+// rtl overrides
+.dir-rtl {
+    .path-mod-forum .forumheaderlist {
+        thead .header.lastpost {
+            text-align: left;
+        }
+    }
+}
