--- a/theme/bootstrapbase/less/moodle/chat.less
+++ b/theme/bootstrapbase/less/moodle/chat.less
@@ -1,83 +1,139 @@
 // Chat (more!)
 // -------------------------
-.yui-skin-sam .yui-layout  {
-    background-color: @white;
-}
-
-.yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd-nohd,
-.yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd-noft,
-.yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd,
-.yui-skin-sam .yui-layout-unit-right,
-.yui-skin-sam .yui-layout-unit-bottom {
-    border: 0;
-}
-
-.yui-skin-sam .yui-layout-unit-right {
-    .well;
-    border-radius: 0;
-}
-
-.yui-skin-sam .yui-layout-unit-bottom {
-    .well;
-    border-radius: 0;
-}
-
-.yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd {
-    background-color: transparent;
-}
-
-#chat-input-area table.generaltable,
-#chat-input-area table.generaltable td.cell {
-    border: 0;
-    margin: 3px 20px;
-    input {
-        margin-right: 10px;
+.yui-skin-sam .yui-layout.path-mod-chat-gui_ajax {
+    background-color: #fff;
+    .yui-layout-unit div.yui-layout-bd-nohd,
+    .yui-layout-unit div.yui-layout-bd-noft,
+    .yui-layout-unit div.yui-layout-bd,
+    .yui-layout-unit-right,
+    .yui-layout-unit-bottom {
+        border: 0;
+    }
+    .yui-layout-bd, .yui-layout-wrap, .yui-resize {
+        /*width:100% !important; //until inline styles taken out of chat css's*/
+    }
+    .yui-layout-unit-right,
+    .yui-layout-unit-bottom {
+        .well;
+        border-radius: 0;
+    }
+    .yui-layout-unit div.yui-layout-bd {
+        background-color: transparent;
     }
 }
 
-#chat-userlist {
-    padding: 10px 5px;
-    #users-list {
-        border-top: 1px solid #ddd;
-        border-bottom: 1px solid @white;
-        li {
-            border-top: 1px solid @white;
-            border-bottom: 1px solid #ddd;
-            padding: 5px 10px;
-        }
-        img {
-            margin-right: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            max-width: none;
+.path-mod-chat-gui_ajax {
+    #chat-input-area table.generaltable,
+    #chat-input-area table.generaltable td.cell {
+        border: 0;
+        padding: 3px 15px;
+        input {
+            margin-right: 10px;
         }
     }
-}
 
-#chat-messages {
-    margin: 20px 25px;
-    .chat-event {
-        text-align: center;
-        margin: 10px 0;
-        font-size: @fontSizeSmall;
-        color: #777;
+    #chat-userlist {
+        padding: 10px 5px;
+        #users-list {
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid @white;
+            li {
+                border-top: 1px solid @white;
+                border-bottom: 1px solid #ddd;
+                padding: 5px 10px;
+            }
+            img {
+                margin-right: 8px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                max-width: none;
+            }
+        }
     }
-    .chat-message {
-        background-color: @white;
-        border: 1px dotted #ddd;
-        .border-radius(4px);
-        padding: 4px 10px;
-        margin: 10px 0;
-        .time {
-            float: right;
-            font-size: 11px;
+
+    #chat-messages {
+        margin: 20px 25px;
+        .chat-event.course-theme {
+            text-align: center;
+            margin: 10px 0;
+            font-size: @fontSizeSmall;
             color: #777;
         }
-    }
-    .mdl-chat-my-entry .chat-message {
-        background-color:#f6f6f6;
-        .user {
-            font-weight: bold;
+        .chat-message.course-theme {
+            background-color: @white;
+            border: 1px dotted #ddd;
+            .border-radius(4px);
+            padding: 4px 10px;
+            margin: 10px 0;
+            .time {
+                float: right;
+                font-size: 11px;
+                color: #777;
+            }
         }
+        .mdl-chat-my-entry .chat-message.course-theme {
+            background-color:#f6f6f6;
+            .user {
+                font-weight: bold;
+            }
+        }
+    }
+}
+// RTL overides
+.path-mod-chat-gui_ajax.dir-rtl {
+    .yui-layout-unit, yui-layout-bd {
+    }
+    .yui-layout-unit-bottom {
+        margin-right: 30px;
+    }
+    #chat-input-area {
+        table.generaltable {
+            td.cell {
+                margin: 3px 0px;
+                input {
+                    margin-left: 10px;
+                }
+            }
+        }
+        .input-message {
+        }
+    }
+
+    #chat-userlist {
+        #users-list {
+            img {
+                margin-left: 8px;
+            }
+        }
+    }
+    #chat-messages {
+        .chat-message.course-theme {
+            .time {
+                float: left;
+                font-size: 11px;
+                color: #777;
+            }
+            .user {
+                float:right;
+            }
+            .chat-message-meta {
+                height: 20px;
+            }
+            .text {
+                text-align: right;
+            }
+        }
+    }
+}
+.yui-skin-sam .path-mod-chat-gui_ajax.dir-rtl {
+
+    .yui-layout-unit-right {
+        padding: 0;
+    }
+    yui-layout-unit div.yui-layout-bd {
+        text-align: right;
+    }
+    .yui-layout-unit div.yui-layout-bd {
+        text-align: right;
     }
 }
