MDL-42853 course: Fix edit title icon margin on RTL

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -780,6 +780,15 @@ span.editinstructions {
     }
 }
 
+.dir-rtl .section {
+    .editing_title {
+        .iconsmall {
+            margin: 8px 0 0 8px;
+            padding: 4px 0 0 8px;
+        }
+    }
+}
+
 /**
  * Course management page
  * Palette
