MDL-42887 Forms: Collapse all field elements below their labels on screens less than 1180px
Includes css fixes to make the question type edit screens look OK with this change.

--- a/theme/base/style/question.css
+++ b/theme/base/style/question.css
@@ -130,6 +130,27 @@ body.path-question-type .fitem_fgroup .accesshide {font: inherit;left: 0;positio
     background: none;
 }
 
+/* Add a little padding to the answer sections of edit question forms. */
+.path-question-type.editing #id_answerhdr .fitem .fitemtitle,
+.path-question-type.editing #id_answerhdr .fitem .felement {
+    margin-left: 6px;
+    margin-right: 6px;
+}
+.path-question-type.editing #id_answerhdr .fitem_feditor .felement {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+@media (min-width: 1200px) {
+    .path-question-type.editing #id_answerhdr .fitem_feditor .felement {
+        margin-left: 16%;
+        margin-right: 0px;
+    }
+    .dir-rtl .path-question-type.editing #id_answerhdr .fitem_feditor .felement {
+        margin-right: 16%;
+        margin-left: 0px;
+    }
+}
+
 /** Overide for RTL layout **/
 .dir-rtl #qtypechoicecontainer #chooseqtype .instruction,
 .dir-rtl #qtypechoicecontainer #chooseqtype .qtypesummary {right: 60%;left: 0%; border-left:0;border-right: 1px solid grey;}
