--- a/theme/bootstrapbase/less/moodle/question.less
+++ b/theme/bootstrapbase/less/moodle/question.less
@@ -462,12 +462,12 @@ a#hidebankcmd {
 }
 
 /* Add a little padding to the answer sections of edit question forms. */
-.path-question-type.editing #id_answerhdr .fitem .fitemtitle,
-.path-question-type.editing #id_answerhdr .fitem .felement {
+.path-question-type #id_answerhdr .fitem .fitemtitle,
+.path-question-type #id_answerhdr .fitem .felement {
     margin-left: 6px;
     margin-right: 6px;
 }
-.path-question-type.editing #id_answerhdr .fitem_feditor .felement {
+.path-question-type #id_answerhdr .fitem_feditor .felement {
     margin-left: 0px;
     margin-right: 0px;
 }
