--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -14,11 +14,17 @@
     display:none;
 }
 
-.empty-region-side-post #region-bs-main-and-pre.span9 {
-    width:100%;
+.empty-region-side-post #region-bs-main-and-pre.span9,
+.empty-region-side-pre #region-bs-main-and-post.span9,
+.empty-region-side-post #region-bs-main-and-post.span9 #region-main.span8 {
+    /** LTR with no post area. 
+        RTL with no pre area.
+        RTL with no post area. **/
+    width: 100%;
 }
 
-.empty-region-side-pre #region-main {
+.empty-region-side-pre #region-bs-main-and-pre.span9 #region-main {
+    /** LTR with no pre area. **/
     float:none;
     width:100%;
 }
@@ -37,9 +43,9 @@
     .fluid-span(3);
 }
 
-.empty-region-side-post #region-bs-main-and-post.span9 #region-main.span8 {
-    /** RTL with no post area. **/
-    width:100%;
+.empty-region-side-pre #region-bs-main-and-post.span9 #region-main.span8 {
+    /** RTL with no pre area. **/
+    float: right;
 }
 
 /** Page layout CSS ends **/
